# webagent

./: README.md  package.json
agent/: agent.py  pyproject.toml  requirements.txt
agent/sample_agent/: agent.py  demo.py
src/app/: page.tsx
src/app/api/copilotkit/: route.ts
src/app/components/: SunIcon.tsx  WeatherCard.tsx  YourMainContent.tsx
